# mlops_supply_chain

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  app.py
configs/: settings.yaml
core/: __init__.py  evaluation.py  features.py  review_rules.py  training.py  validation.py
data/: Product_Inventory.csv  Purchase_Orders.csv  Sales_Invoiced.csv
pipelines/: __init__.py
scripts/: create_review_queue.py  deploy_staging.py  diagnose_model.py  predict_batch.py  predict_batch_stdlib.py  train.py  train_stdlib.py
steps/: __init__.py
tests/: __init__.py  test_api.py  test_evaluation.py  test_features.py  test_review_rules.py  test_training.py  test_validation.py
